@@ -2,6 +2,12 @@
 
 	* pq.c: Add #include <sys/mman.h> for munmap decl.
 
+1999-07-09  Thomas Bushnell, BSG  <tb@mit.edu>
+
+	* pq.c (packet_realloc): Use mmap instead of vm_allocate.
+	(packet_read_ports): Likewise.
+	(packet_read): Likewise.
+
 1999-07-03  Thomas Bushnell, BSG  <tb@mit.edu>
 
 	* pq.c (free_packets): Use munmap instead of vm_deallocate.
